# super-broccoli

./: .gitignore  CHANGELOG.md  README.md  flake.nix  stack.yaml  tech-team-haskell-trial.cabal
app/server/: Main.hs
scripts/: README.md  add-item.sh  create-cart.sh  get-cart.sh  remove-item.sh
src/api/: Api.hs
